feat: implement restaurant search
